<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ImageAddPopup"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/naver_green_light"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_saveOrNot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:width="180dp"
        android:background="@android:color/transparent"
        android:text="@string/textView_saveOrNot"
        android:textAlignment="center"
        android:fontFamily="@font/nanum_square_round_b"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_save"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:text="@string/button_save"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_notSave"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:text="@string/button_cancel"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>