<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageAddPopup">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/naver_green_light"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/nanum_square_round_b"
                android:text="@string/textView_addImageUrl" />

            <TextView
                android:id="@+id/popup_invalidUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:gravity="start"
                android:textSize="13dp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:fontFamily="@font/nanum_square_round_r"
                android:text="@string/textView_invalidUrl"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/popup_getImageFromURL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:layout_gravity="center"
                android:textSize="15dp"
                android:background="@android:color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textColorHint="@color/light_grey"
                android:fontFamily="@font/nanum_square_round_r"
                android:hint="@string/textView_addImageUrlHint" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/popup_sendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/nanum_square_round_r"
                    android:text="@string/button_addImageUrl" />

                <Button
                    android:id="@+id/popup_backButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/nanum_square_round_r"
                    android:layout_marginLeft="30dp"
                    android:text="@string/button_back" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>