<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageAddPopup">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/naver_green_light"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/popup_getImageFromGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/button_getGalleryImage"
                android:fontFamily="@font/nanum_square_round_b"/>

            <Button
                android:id="@+id/popup_getImageFromCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/button_getCameraImage"
                android:fontFamily="@font/nanum_square_round_b"/>

            <Button
                android:id="@+id/popup_getImageFromURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/button_getUrlImage"
                android:fontFamily="@font/nanum_square_round_b"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>