<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMemoActivity">

    <include
        android:id="@+id/add_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_title"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:hint="@string/editText_memoTitle"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:fontFamily="@font/nanum_square_round_b"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/add_content"
                    android:layout_marginTop="5dp"
                    android:padding="20dp"
                    android:gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/editText_memoContent"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_square_round_r"
                    android:background="@android:color/transparent"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="4">

                <TextView
                    android:id="@+id/add_addImageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/textView_memoImageInput"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@color/transparent_grey"
                    android:fontFamily="@font/nanum_square_round_b"
                    />

                <TextView
                    android:id="@+id/add_addImageMinTextView"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/textView_memoImageInput"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@color/transparent_grey"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/add_recyclerListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:scrollbars="horizontal"
                    android:visibility="gone">
                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>